--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,194 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+  box-sizing: border-box;
+  
+  
+}
+html{
+  height: 100%;
+  
+}
+body { 
+  position:absolute;
+  top:0; 
+  bottom:0; 
+  right:0; 
+  left:0; 
+  background-color: #FAACA8;
+background-image: linear-gradient(19deg, #FAACA8 0%, #DDD6F3 100%);
+
+ 
+}
+.app{
+  height: 100%;
+  top:0; 
+  bottom:0; 
+  right:0; 
+  left:0; 
+ 
+}
+.start-container{
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-content: center;
+  align-items: center;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.start-container-title{
+  font-family: 'Karla';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 2rem;
+  line-height: 2rem;
+  text-align: center;
+  color: #293264;
 }
+
+.start-container-subtitle{
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 1rem;
+  text-align: center;
+
+  color: #293264;
+}
+
+.start-container-button{
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 1rem;
+  text-align: center;
+
+  color: #F5F7FB;
+  cursor: pointer;
+  background: #4D5B9E;
+  border-radius: 1rem;
+  
+  border: 0px;
+  
+  width: 50%;
+  padding: 5% 2% 5% 2%;
+}
+
+.quiz-container {
+ display: flex;
+ flex-direction: column;
+ justify-content: center;
+ align-items: center;
+ 
+}
+
+.quiz-container-question{
+  display: flex;
+  flex-direction: column;
+  align-items: stretch;
+  margin: 0.7%;
+  margin-left: 9%;
+  margin-right:8%;
+}
+
+.quiz-container-question-title{
+      font-family: 'Karla';
+      font-style: normal;
+      font-weight: 700;
+      font-size: 1rem;
+      line-height: 1rem;
+      color: #293264;
+}
+
+.quiz-container-question-options-container{
+  display: flex;
+  justify-content: center;
+  
+}
+
+.quiz-container-question-options-container-option{
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 500;
+  font-size: 1rem;
+  padding: 10px;
+  line-height: 0.7rem;
+  text-align: center;
+  margin-right: 10px;
+  color: #293264;
+  border-radius: 0.5rem;
+  border: 0.5%;
+  line-height: 1rem;
+  cursor: pointer;
+}
+
+.button-container{
+  display: flex;
+  gap: 10px;
+  align-self: center;
+  cursor: pointer;
+  
+}
+
+.button-container-score{
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 700;
+  font-size: 1rem;
+  text-align: center;
+  
+  color: #293264;
+
+}
+
+
+
+.button{
+  
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 0.9rem;
+  text-align: center;
+
+  color: #F5F7FB;
+
+  
+  width: 90%;
+  height: 3rem;
+  background: #4D5B9E;
+  border-radius: 1rem;
+  
+  border: 1%;
+  
+  align-self: center;
+}
+
+.button:disabled{
+  
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 600;
+  font-size: 1rem;
+  text-align: center;
+
+  color: #F5F7FB;
+  
+  opacity: 50%;
+  
+  width: 8rem;
+  height: 2rem;
+  background: #4D5B9E;
+  border-radius: 1rem;
+  
+  border: 1px;
+  
+  align-self: center;
+}
+
+
+
+
